--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,74 @@
-node_modules
+# =====================
+# Dependencies
+# =====================
+node_modules/
+# =====================
+# Environment variables
+# =====================
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# =====================
+# Logs
+# =====================
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# =====================
+# Build / Transpiled files
+# =====================
+dist/
+build/
+out/
+
+# =====================
+# Coverage & Reports
+# =====================
+coverage/
+.nyc_output/
+
+# =====================
+# Runtime files
+# =====================
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# =====================
+# Uploads (if using multer or similar)
+# =====================
+uploads/
+tmp/
+
+# =====================
+# OS files
+# =====================
+.DS_Store
+Thumbs.db
+
+# =====================
+# IDE / Editor settings
+# =====================
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# =====================
+# Database files (local)
+# =====================
+*.sqlite
+*.db
+
+# =====================
+# Docker (optional)
+# =====================
+.dockerignore
